# robot_avvtn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  avvtn.cfg  build.sh
doc/: README.md
include/avvtn_api/: avvtn_api.h  avvtn_param.h
license/: avvtn_license
resource/aiui/: aiui.cfg
resource/cae_mic6/: mmsp_60x40.ini
resource/evad/: evad.jet
resource/face_detect/: e1e461fb6_2.0.0.5_fa_model.res.cpu.float  ee3c974c4_2.0.0.1_jd_model.res.cpu.float
resource/vtn/res/cae_circle6mic_std/: cae_init_param.ini
resource/vtn/res/cae_line4mic_std/: cae_init_param.ini
resource/vtn/res/ivw_3.17.12/: grammar.txt  ivw_g.cfg  origin_3.17.12.1_ivw_g.cfg
resource/vtn/res/vtn/: vtn.ini  vtn_hiargos.ini  vtn_hqhq.ini  vtn_hxxj_int.ini
src/: CMakeLists.txt  main.cpp
src/aiui_capture/: aiui_wapper.cpp  aiui_wapper.h
src/aiui_capture/aiui/: AIUIConstant.h  AIUIErrorCode.h  PcmPlayer.h  PcmPlayer_C.h
src/audio_capture/: audio_capture.cpp  audio_capture.h
src/avvtn_capture/: aiui_handle.cpp  avvtn_capture.cpp  avvtn_capture.h  avvtn_handle.cpp  skill_handle.cpp
src/ros2/: ros_manager.cpp  ros_manager.hpp
src/utils/: Logger.cpp  Logger.hpp  StreamNlpTtsHelper.h
src/video_capture/: video_capture.cpp  video_capture.h
